--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body{
   align-items: center;
   justify-content: center;
   text-align: center;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 img{
@@ -36,7 +36,7 @@ img{
   border-radius: 0.625rem;
   box-shadow: 5px 5px 5px rgba(0,0,0,0.05);
   margin-bottom: 2rem;
-  width: 375px;
+  max-width: 375px;
 }
 
 .container img{
@@ -62,7 +62,7 @@ img{
 
 .attribution a { color: hsl(228, 45%, 44%); }
 
-@media (max-width: 375px) {
+/* @media (max-width: 375px) {
   .container{
     width: 300px;
   }
@@ -72,4 +72,4 @@ img{
   .container p{
     font-size: 1.1em;
   }
-}
+} */
